# packages/db/pkg/testutils/queries/models.go
@@ -169,6 +169,14 @@ type ProjectLimit struct {
 	ApiTeamRpsList           int64
 }
 
+type ProjectionBillingProfile struct {
+	ProjectID uuid.UUID
+	Revision  int64
+	DecidedAt *time.Time
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
 type ProjectionProjectBlock struct {
 	ProjectID uuid.UUID
 	Revision  int64
@@ -248,6 +256,14 @@ type TeamApiKey struct {
 	ApiKeyLength     int32
 	ApiKeyMaskPrefix string
 	ApiKeyMaskSuffix string
+}
+
+type TeamBillingProfile struct {
+	TeamID           uuid.UUID
+	HasPaymentMethod bool
+	Enterprise       bool
+	Plan             pgtype.Text
+	UpdatedAt        time.Time
 }
 
 type TeamLimit struct {
